force-app/main/default/objects/QCP_Approval_Flag__mdt/QCP_Approval_Flag__mdt.object-meta.xml
<CustomObject>
    <label>QCP Approval Flag</label>
    <pluralLabel>QCP Approval Flags</pluralLabel>
</CustomObject>