force-app/main/default/objects/QCP_Approval_Flag__mdt/fields/Flag_Value_If_True__c.field-meta.xml
<CustomField>
    <fullName>Flag_Value_If_True__c</fullName>
    <label>Flag Value If True</label>
    <length>255</length>
    <type>Text</type>
</CustomField>