force-app/main/default/objects/QCP_Approval_Flag__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>